# mcproto

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: _config.yml  index.md
mcproto/: Cargo.toml
mcproto-derive/: Cargo.toml
mcproto-derive/src/: lib.rs
mcproto-derive/tests/: tests.rs
mcproto-http/: Cargo.toml
mcproto-http/src/: auth.rs  lib.rs  player_uuid.rs
mcproto-http/src/auth/: common.rs  device_code.rs
mcproto-http/tests/: tests.rs
mcproto-nbt/: Cargo.toml
mcproto-nbt/src/: lib.rs  nbt.rs
mcproto-nbt/src/templates/: level.rs
mcproto-nbt/src/templates/level/: player.rs
mcproto-nbt/tests/: tests.rs
mcproto-network/: Cargo.toml
mcproto-network/src/: packet.rs
mcproto-network/src/packet/: configuration.rs  handshake.rs  login.rs  play.rs  status.rs
mcproto-network/src/packet/play/: block.rs  bossbar.rs  container.rs
mcproto-network/tests/: tests.rs
mcproto-utils/: Cargo.toml
mcproto-utils/src/: lib.rs
mcproto-utils/src/utils/: varint.rs  varlong.rs
mcproto-utils/tests/: tests.rs
mcproto/src/: lib.rs  packet.rs  utils.rs
mcproto/src/utils/: compress.rs  varint.rs  varlong.rs
mcproto/tests/: derive_tests.rs  tests.rs
src/: lib.rs  utils.rs
src/utils/: varint.rs
