[package]
name = "mcproto-derive" # 宏包
version = "0.1.0"
edition = "2021"
description = "Derive macros for mcproto"
license = "MIT"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "2.0", features = ["derive", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "2.0.18"