[package]
name = "mcproto-derive" # 宏包
version = "0.1.2"
edition = "2021"
description = "Derive macros for mcproto"
license = "MIT"
repository = "https://github.com/TheOpenTeam/mcproto"
[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "2.0", features = ["derive", "parsing", "extra-traits"] }
quote = "1.0"
mcproto-utils = {path = "../mcproto-utils"}
