[package]
name = "mcproto-http"
version = "0.1.3"
description = "Minecraft protocol library, http (including auth) features"
license = "MIT"
edition = "2024"
repository = "https://github.com/TheOpenTeam/mcproto"

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "form"] }
uuid = "1.22.0"
tokio = {version = "1.50", features = ["rt", "macros"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
