[package]
name = "mcproto-network"
version = "0.1.2"
description = "Minecraft protocol library network feature"
license = "MIT"
edition = "2024"
repository = "https://github.com/TheOpenTeam/mcproto"

[dependencies]
thiserror = "2.0.18"
mcproto-derive = { path = "../mcproto-derive" }
mcproto-utils = { path = "../mcproto-utils" }
