[package]
name = "mcproto"
version = "0.1.2"
description = "Minecraft protocol librar"
license = "MIT"
edition = "2024"
repository = "https://github.com/TheOpenTeam/mcproto"
[features]
default = []

network = ["dep:mcproto-network"]
[dependencies]
mcproto-derive = {path = "../mcproto-derive"}
mcproto-utils = {path = "../mcproto-utils"} #两个必装
mcproto-network = {path = "../mcproto-network", optional = true}


