[package]
name = "mcproto"
version = "0.1.3"
description = "Minecraft protocol library"
license = "MIT"
edition = "2024"
repository = "https://github.com/TheOpenTeam/mcproto"
[features]
default = []

network = ["dep:mcproto-network"]
http = ["dep:mcproto-http"]
[dependencies]
mcproto-derive = {path = "../mcproto-derive", version = "0.1.3"}
mcproto-utils = {path = "../mcproto-utils", version = "0.1.3"} #两个必装
mcproto-network = {path = "../mcproto-network", optional = true, version = "0.1.3"}
mcproto-http = {path = "../mcproto-http", optional = true, version = "0.1.3"}


